A few bugs! Capitalized guesses would count itself as different to the lowercase version e.g. Dent vs dent. Submission of highscore can now be done with a enter button keydown instead of requiring the button click! Also can only be submitted once! Guess's error message wasn't showing the proper dark mode colour but that was because the styling name was wrong in the stylesheet.

--- a/src/components/Guess.less
+++ b/src/components/Guess.less
@@ -72,7 +72,7 @@
 	height: 6rem;
 }
 
-.Game__error--dark {
+.Guess__error--dark {
 	color: @errorDark;
 }
 
