--- a/src/components/Home.less
+++ b/src/components/Home.less
@@ -75,6 +75,8 @@
 	overflow: hidden;
 	display: flex;
 	justify-content: center;
+	flex-direction: column;
+	align-items: center;
 
 	table {
 		border-collapse: collapse;
